objects/Fast_Pass_Experian_Credential__mdt.object
<CustomObject>
    <description>Fast Pass Experian Credentials for Business API</description>
    <fields>
        <fullName>auth_url__c</fullName>
        <description>auth_url for authentication in experian services</description>
        <label>auth_url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>base_url__c</fullName>
        <label>base_url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>client_id__c</fullName>
        <label>client_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>client_secret__c</fullName>
        <label>client_secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subcode__c</fullName>
        <label>subcode</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Fast Pass Experian Credential</label>
    <listViews>
        <fullName>testtest</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>auth_url__c</columns>
        <columns>base_url__c</columns>
        <columns>client_id__c</columns>
        <columns>client_secret__c</columns>
        <columns>password__c</columns>
        <columns>username__c</columns>
        <filterScope>Everything</filterScope>
        <label>test</label>
    </listViews>
    <pluralLabel>Fast Pass Experian Credentials</pluralLabel>
</CustomObject>